--- a/Code.html
+++ b/Code.html
@@ -67,7 +67,7 @@
     </table>
 
     <p><b>Best Team Logo</b></p>
-    <img src="logo.jpg" alt="Logo">
+    <img src="dog.jpg" alt="Logo">
     
     <p><a href="Score.html">Go to Score Summary</a></p>
 </body>
