--- a/Code.html
+++ b/Code.html
@@ -33,7 +33,7 @@
         }
         a {
             font-family: "Times New Roman", Times, serif;
-            text-decoration: none;
+            text-decoration: underline; /* Added this to underline the link */
             color: blue;
         }
     </style>
